# solana-program-library

associated-token-account/program/: Cargo.toml
memo/program/: Cargo.toml
token/program/: Cargo.toml
token/program-2022/: Cargo.toml
