[package]
name = "spl-associated-token-account"
version = "1.0.3"
description = "Solana Program Library Associated Token Account"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana", branch="master" }
spl-token = { version = "3.2", path = "../../token/program", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = { git = "https://github.com/solana-labs/solana", branch="master" }
solana-sdk = { git = "https://github.com/solana-labs/solana", branch="master" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
