[package]
name = "spl-token"
version = "3.3.0"
description = "Solana Program Library Token"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
solana-program = { git = "https://github.com/solana-labs/solana", branch="master" }

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "0.5.1"
solana-program-test = { git = "https://github.com/solana-labs/solana", branch="master" }
solana-sdk = { git = "https://github.com/solana-labs/solana", branch="master" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
